PyMaker/datas/object2/RawHTML/i7301/Python_DOC_referPages.concatenation-with-multiple-variables-and-back-slashes-error-in-python.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/647769/why-cant-pythons-raw-string-literals-end-with-a-single-backslash">Why can't Python's raw string literals end with a single backslash?</a>
<span class="question-originals-answer-count">
                    12 answers
                </span>
</li>
</ul>
</div>
<p>This is one of my lines in a script I'm trying to make in Python:</p>
<pre><code>src = r"C:\Users\Aydan\Desktop\SortedImages\" + text_file_name + "\\" + file_name
</code></pre>
<p>As you can see, I'm trying to concatenate a file destination together with folder names stored in a variable and a file name stored in another variable.</p>
<p>When debugging, I'm getting an error with the syntax:</p>
<pre><code>SyntaxError: unexpected character after line continuation character
</code></pre>
<p>I'm assuming it's the backslash, but I've escaped it so I'm not too sure what to do. Other than the  backslash, I have no idea what this error is pointing at.</p>
<p>Whole code:</p>
<pre><code>import shutil
import glob
dst = r"C:/Users/Aydan/Desktop/1855"

for filename in glob.glob(r"C:\Users\Aydan\Desktop\RTHPython\Years\*.txt"):
    text_file_name = filename.strip()
    with open (text_file_name) as my_file:
        for filename in my_file:
            file_name  = filename.strip()
            src = r"C:\Users\Aydan\Desktop\SortedImages\" + text_file_name + "\\" + file_name
            shutil.move(src, dst)
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>A string can't end with a backslash which essentially escapes the closing quote, even if using raw strings:</p>
<pre><code>src = r"C:\Users\Aydan\Desktop\SortedImages\"
  File "&lt;stdin&gt;", line 1
    src = r"C:\Users\Aydan\Desktop\SortedImages\"
                                                ^
SyntaxError: EOL while scanning string literal
</code></pre>
<p>Simply use <code>os.path.join</code>:</p>
<pre><code>import os

os.path.join(r"C:\Users\Aydan\Desktop\SortedImages", text_file_name, file_name)
</code></pre>
</div>
<span class="comment-copy">You can't put a single backslash as the final char in a raw string. But you shouldn't be using string concatenation to build paths. The old way to do it properly is <a href="https://docs.python.org/3/library/os.path.html#os.path.join" rel="nofollow noreferrer"><code>os.path.join</code></a>, the modern way is to use the <a href="https://docs.python.org/3/library/pathlib.html" rel="nofollow noreferrer"><code>pathlib</code></a> module.</span>
<span class="comment-copy">Why doesn't marking the string as <code>raw</code> prevent escaping the quotation mark at the end of the string? That seems odd in my opinion.</span>
<span class="comment-copy">Check all my code, just edited.</span>
<span class="comment-copy">@TomWyllie See <a href="https://stackoverflow.com/q/647769/4014959">stackoverflow.com/q/647769/4014959</a></span>
<span class="comment-copy">@PM2Ring, that's really obvious actually now I've read that, can't believe I missed that!</span>
<span class="comment-copy">Does this search for the files named? Or does it need a file to take the files out of?</span>
